@@ -15,3 +15,10 @@ This is a tutorial about batou components. You will use batou to deploy a
 simple long-running process as a daemon using supervisor.
 
 :doc:`Read the "Using components" tutorial. <component>`
+
+Creating a new project
+----------------------
+
+This is shows how to setup and use new projects. 
+
+:doc:`Read the "Creating new projects" tutorial. <create-new-project>`
